<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"


    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="fronteiratec.testeru.MainActivity"
    tools:showIn="@layout/activity_main"
    android:useDefaultMargins="false"
    android:columnCount="3"
    android:rowCount="3">


    <Button
        android:background="@color/colorGridTwo"
        android:textColor="@color/textColor"
        android:layout_width="192dp"
        android:layout_height="195dp"
        android:text="@string/seg"
        android:id="@+id/button"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_gravity="top"
        android:onClick="showSecondActivity"
        android:clickable="true" />

    <Button
        android:layout_width="192dp"
        android:background="@color/colorGridFour"
        android:textColor="@color/textColor"
        android:layout_height="195dp"
        android:text="@string/qua"
        android:id="@+id/button3"
        android:layout_row="1"
        android:layout_column="0"
        android:onClick="showSecondActivity"/>

    <Button
        android:background="@color/colorGridFive"
        android:textColor="@color/textColor"
        android:layout_width="192dp"
        android:layout_height="195dp"
        android:text="@string/qui"
        android:id="@+id/button4"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_gravity="top|right"
        android:onClick="showSecondActivity"/>

    <Button
        android:background="@color/colorGridOne"
        android:textColor="@color/textColor"
        android:layout_width="192dp"
        android:layout_height="195dp"
        android:text="@string/sex"
        android:id="@+id/button5"
        android:layout_row="2"
        android:layout_column="0"
        android:onClick="showSecondActivity"/>

    <Button
        android:background="@color/colorGridThree"
        android:textColor="@color/textColor"
        android:layout_width="192dp"
        android:layout_height="195dp"
        android:text="@string/ter"
        android:id="@+id/button2"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_gravity="right"
        android:onClick="showSecondActivity"/>

    <Button
        android:background="@color/colorPrimary"
        android:textColor="@color/textColor"
        android:layout_width="192dp"
        android:layout_height="195dp"
        android:text="@string/cont"
        android:id="@+id/button6"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_gravity="right"
        android:onClick="showContactActivity"/>

</GridLayout>
